# VirtualPipe

./: .gitignore  CONTRIBUTING.md  Cargo.toml  build.rs  build.sh  flatpak_manifest-dev.yml  flatpak_manifest-git.yml  flatpak_manifest.yml  net.viniadrii.VirtualPipe.desktop  net.viniadrii.VirtualPipe.metainfo.xml  readme.md  todo.txt
app/lang/: MY_PROJECT.pot
app/lang/en/LC_MESSAGES/: virtualpipe.po
app/lang/pt/LC_MESSAGES/: virtualpipe.po
app/src/: main.rs
app/src/cli/: mod.rs
app/src/load_pipelist/: get.rs  mod.rs  utils.rs
app/src/pipe/: create.rs  get.rs  mod.rs  remove.rs
app/src/pipelist/: load.rs  mod.rs  save.rs
app/src/pipelist_utils/: create_pipe.rs  mod.rs
app/src/save_pipelist/: mod.rs
app/src/settings/: load.rs  mod.rs  save.rs
app/src/settings/apply/: startup.rs
app/src/settings/apply/assets/: net.viniadrii.VirtualPipe.desktop
app/structs/: Config.slint  Pipe.slint  Settings.slint
app/ui/: main.slint  structs.slint
app/ui/components/00.MainPage/: MainPage.slint
app/ui/components/00.MainPage/components/: Card.slint
app/ui/components/01.SettingsPage/: SettingsPage.slint
app/ui/components/02.FirstRunPage/: FirstRunPage.slint
assets/: build_flatpak.yml  entry.desktop  flatpak_manifest.json  flatpak_manifest.yml  metainfo.xml  net.viniadrii.VirtualPipe.desktop  net.viniadrii.VirtualPipe.metainfo.xml
assets/autostart/: virtualpipe.service
gui/: assets.slint  main.slint  structs.slint
gui/main_window/: main.slint  pipe_edit.slint  pipe_list.slint
src/: main.rs  pipe.rs
