[package]
name = "virtualpipe"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "virtualpipe"
path = "app/src/main.rs"

[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
strip = "symbols"
panic = "abort"



[build-dependencies]
slint-build = "1.14"

[dependencies]
anyhow     = "1.0"
serde      = "1.0"
serde_json = "1.0"
dirs       = "6.0"
ashpd      = "0.12"
tokio = { version = "1", features = ["macros"] }
i-slint-backend-winit = "1.14.0"
slint-build           = "1.14"

[dependencies.clap]
version = "4.5"
features = [
    "derive"
]

[dependencies.slint]
version = "1.14"
default-features = false
features = [
    "serde",
    "backend-winit",
    "renderer-skia",
    "compat-1-2",
    "gettext"
]
